Complete support for native experiments